--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    Lesson one    
-    Part one    
+    Lesson one and two
+    I understood completely   
 </body>
 </html>
