--- a/dz2.html
+++ b/dz2.html
@@ -7,25 +7,25 @@
     <title>Document</title>
     <style>
         .main {
-            max-width: 200px;
-            margin: 20px auto;
-            background-color: rgb(189, 212, 212);
-            padding: 20px;
+            max-width: 200px auto;
+            margin: auto;
+            background-color: rgb(117, 209, 209);
+            padding: auto;
         }
 
         .red {
-            max-width: auto;
+            max-width: 10px auto;
             margin: 10px auto;
-            background-color: gray;
+            background-color: rgb(180, 219, 240);
             font: red;
             
         }
 
         .black {
-            max-width: auto;
+            max-width: 10px auto;
             margin: 20px auto;
-            background-color: gray;
-            font: black;
+            background-color: rgb(180, 219, 240);
+            font-size: 60px black;
            
         }
     </style>
@@ -33,9 +33,9 @@
 
 <body>
     <a href="index.html">Home</a><br>
-    <span class="main">
+    <div class="main">
         <p>Player 1:</p>
-        <div class="black">2&clubs;</div>
+        <span class="black">2&clubs;</span>
         <span class="red">9&hearts;</span>
         <span class="red">6&hearts;</span>
         <span class="red">A&diams;</span>
@@ -48,7 +48,7 @@
         K&diams;
         8&spades;
         3&hearts;
-    </span>
+    </div>
 
 </body>
 
