--- a/dz2.html
+++ b/dz2.html
@@ -6,34 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .main {
-            max-width: 200px auto;
-            margin: auto;
-            background-color: rgb(117, 209, 209);
-            padding: auto;
+        div {
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            max-width: 400px;
+            padding-left: 20px;
+            padding-right: 30px;
+            padding-top: 10px;
+            padding-bottom: 40px;
+            background-color: #f6f6f6;
         }
 
+        p {
+            font-size: 20px;
+        }
+
+
         .red {
-            max-width: 10px auto;
-            margin: 10px auto;
-            background-color: rgb(180, 219, 240);
-            font: red;
-            
+            font-size: 20;
+            color: red;
+            background-color: #e0e0e0;
+            padding-left: 10px;
+            padding-right: 10px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+
         }
 
         .black {
-            max-width: 10px auto;
-            margin: 20px auto;
-            background-color: rgb(180, 219, 240);
-            font-size: 60px black;
-           
+            font-size: 80;
+            color: black;
+            background-color: #e0e0e0;
+            padding-left: 10px;
+            padding-right: 10px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+
         }
     </style>
 </head>
 
 <body>
     <a href="index.html">Home</a><br>
-    <div class="main">
+    <div>
         <p>Player 1:</p>
         <span class="black">2&clubs;</span>
         <span class="red">9&hearts;</span>
@@ -42,12 +56,12 @@
         <span class="black">Q&spades;</span>
         <span class="black">J&clubs;</span><br>
         <p>Player 2:</p>
-        3&hearts;
-        A&clubs;
-        10&clubs;
-        K&diams;
-        8&spades;
-        3&hearts;
+        <span class="red">3&hearts;</span>
+        <span class="black">A&clubs;</span>
+        <span class="black">10&clubs;</span>
+        <span class="red">K&diams;</span>
+        <span class="black">8&spades;</span>
+        <span class="red">3&hearts;</span>
     </div>
 
 </body>
