--- a/dz2.html
+++ b/dz2.html
@@ -13,7 +13,7 @@
             padding-right: 30px;
             padding-top: 10px;
             padding-bottom: 40px;
-            background-color: #f6f6f6;
+            background-color: #cfcfcf;
         }
 
         p {
@@ -22,7 +22,8 @@
 
 
         .red {
-            font-size: 20;
+            
+            font-size: 20px;
             color: red;
             background-color: #e0e0e0;
             padding-left: 10px;
@@ -33,7 +34,7 @@
         }
 
         .black {
-            font-size: 80;
+            font-size: 20px;
             color: black;
             background-color: #e0e0e0;
             padding-left: 10px;
@@ -41,6 +42,10 @@
             padding-top: 10px;
             padding-bottom: 10px;
 
+        }
+        div span {
+            display: inline-block;
+            margin-bottom: 5px;
         }
     </style>
 </head>
