--- a/pz2.html
+++ b/pz2.html
@@ -6,15 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        div {
-            background-color: #f6f6f6;
+        body {
+            max-height: 400px auto;
+            margin: 0 auto;
         }
+
+
+        p {}
 
         h1 {
             text-align: center;
         }
-        .neque{
-            font-size: 20;            
+
+        .neque {
+            font-size: 20;
+        }
+
+        .opacity80 {
+            opacity: 0.8;
+        }
+
+        .opacity87 {
+            opacity: 0.7;
+        }
+
+        .opacity60 {
+            opacity: 0.6;
+        }
+
+        .opacity50 {
+            opacity: 0.5;
+        }
+
+        .opacity40 {
+            opacity: 0.4;
+        }
+
+        .opacity30 {
+            opacity: 0.3;
         }
     </style>
 </head>
@@ -23,37 +52,38 @@
     <div>
         <h1>Lorem Ipsum</h1>
 
-        <p><span class="neque">"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</span>
+        <p><span class="neque">"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
+                velit..."</span>
         </p>
 
         <p><span>"There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is
                 pain..."</span></p>
         <hr color="#e1e1e1">
 
-        <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><span> Aenean a mauris pharetra,
-                vehicula metus eget, gravida<br>
-                sem.</span><span> Duis hendrerit sed velit quis lobortis.</span><span> Mauris lacinia libero at eleifend
-                egestas.</span><span> Cras venenatis sapien ut<br>
-                eleifend dictum.</span><span> In enim nisi, sodales non tincidunt id, porttitor eget dui. Mauris non
-                velit purus.</span></p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            <span class="opacity80"> Aenean a mauris pharetra, vehicula metus eget, gravida sem.</span>
+            <span class="opacity70"> Duis hendrerit sed velit quis lobortis.</span>
+            <span class="opacity60"> Mauris lacinia libero at eleifend egestas.</span>
+            <span class="opacity50"> Cras venenatis sapien ut eleifend dictum.</span>
+            <span class="opacity40"> In enim nisi, sodales non tincidunt id, porttitor eget dui.</span>
+            <span class="opacity30"> Mauris non velit purus.</span>
+        </p>
 
-        <p><span>Nullam rutrum, ligula id pellentesque consequat, velit justo feugiat odio, ut elementum elit augue at
-                mi.</span><span> Aliquam<br>
-                lobortis augue dolor, id finibus sem elementum aliquam.</span><span> Maecenas ac orci id magna dapibus
-                venenatis.</span><span> Nam<br>
-                urna nibh, mattis vitae aliquam quis, volutpat vitae nibh.</span><span> Orci varius natoque penatibus et
-                magnis dis parturient<br>
-                montes, nascetur ridiculus mus.</span><span> Sed porta id nibh vitae porta.</span><span> Vivamus justo
-                mi, interdum eget dictum a, semper<br>
-                et nisi.</span></p>
+        <p>Nullam rutrum, ligula id pellentesque consequat, velit justo feugiat odio, ut elementum elit augue at mi.
+            <span class="opacity80"> Aliquam lobortis augue dolor, id finibus sem elementum aliquam.</span>
+            <span class="opacity70"> Maecenas ac orci id magna dapibus venenatis.</span>
+            <span class="opacity60"> Nam urna nibh, mattis vitae aliquam quis, volutpat vitae nibh.</span>
+            <span class="opacity50"> Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</span>
+            <span class="opacity40"> Sed porta id nibh vitae porta.</span>
+            <span class="opacity30"> Vivamus justo mi, interdum eget dictum a, semper et nisi.</span></p>
 
-        <p><span>Duis eget sagittis nibh.</span><span> Duis ultricies convallis consectetur.</span><span> Donec mollis
-                dictum velit, et gravida sapien accumsan<br>
-                sed.</span><span> Nam bibendum, turpis ut pretium interdum, ipsum neque consequat risus, vel hendrerit
-                turpis arcu quis ante.</span><br>
-            <span> Phasellus a ornare dolor, at tincidunt eros.</span><span> Sed justo justo, ultricies et vestibulum
-                id, consectetur sed quam.</span><span> Donec<br>
-                eu viverra leo.</span>
+        <p>Duis eget sagittis nibh.
+            <span class="opacity80"> Duis ultricies convallis consectetur.</span>
+            <span class="opacity70"> Donec mollis dictum velit, et gravida sapien accumsan sed.</span>
+            <span class="opacity60"> Nam bibendum, turpis ut pretium interdum, ipsum neque consequat risus, vel hendrerit turpis arcu quis ante.</span>
+            <span class="opacity50"> Phasellus a ornare dolor, at tincidunt eros.</span>
+            <span class="opacity40"> Sed justo justo, ultricies et vestibulum id, consectetur sed quam.</span>
+            <span class="opacity30"> Donec eu viverra leo.</span>
         </p>
     </div>
 </body>
