--- a/dz2.html
+++ b/dz2.html
@@ -13,7 +13,7 @@
             padding-right: 30px;
             padding-top: 10px;
             padding-bottom: 40px;
-            background-color: #cfcfcf;
+            background-color: #f1f1f1;
         }
 
         p {
