--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <a href="dz1.html">home work 1</a> <br>
     <a href="dz2.html">home work 2</a> <br>
-    <a href="pz1.html">practical work 1</a>
+    <a href="pz1.html">practical work 1</a> <br>
+    <a href="pz2.html">practical work 1</a>
   </body>
 
 </html>
