--- a/pz3.html
+++ b/pz3.html
@@ -38,6 +38,7 @@
 </head>
 
 <body>
+    <a href="index.html">Home</a>
     <h1 class="alignCentr">Mathematical formulas</h1>
 
     <h2>Linear Equations</h2>
