--- a/pz1.html
+++ b/pz1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <a href="index.html">Home</a>  
-  <b><h1>Vehicle</h1></b>
+  <h1><b>Vehicle</b></h1>
 
 A vehicle (from Latin: vehiculum<sup><a href="#1">[1]</a></sup>) is a machine that transports people or cargo. Vehicles include wagons,<br>
 bicycles,motor vehicles (motorcycles, cars, trucks, buses), railed vehicles (trains, trams), watercraft (ships,<br>
@@ -20,8 +20,8 @@ road vehicles types, terms and definitions.<sup><a href="#3">[3]</a></sup>
 <hr>
 <a id="1"> <small>[1] - "vehicle, n.", OED Online, Oxford University Press, November 2010</small></a><br>
 <br>
-<a id="2"></a> <small>[2] - Halsey, William D. (Editorial Director): MacMillan Contemporary Dictionary, page 1106. MacMillan Publishing, 1979. ISBN 0-02-080780-5</small></a><br>
+<a id="2"> <small>[2] - Halsey, William D. (Editorial Director): MacMillan Contemporary Dictionary, page 1106. MacMillan Publishing, 1979. ISBN 0-02-080780-5</small></a><br>
 <br>
-<a id="3"></a> <small>[3] - ISO 3833:1977 Road vehicles – Types – Terms and definitions Webstore.anis.org</small></a><br>
+<a id="3"> <small>[3] - ISO 3833:1977 Road vehicles – Types – Terms and definitions Webstore.anis.org</small></a><br>
 </body>
 </html>
