--- a/dz3.html
+++ b/dz3.html
@@ -58,9 +58,8 @@
     <a href="index.html">Home</a>
     <h1 class="alignCentr">HTML Tutorial</h1>
 
-    <b>
-        <hr class="rule1">
-    </b>
+    <hr class="rule1">
+
     <h2 class="alignCentr">What is HTML?</h2>
 
     <p><b>Hypertext Markup Language (<abbr title="Hypertext Markup Language" class="uDotted"> HTML </abbr>)</b>
@@ -79,10 +78,10 @@
         <abbr title="Hypertext Markup Language" class="uDotted"> HTML </abbr> provides a means to create structured
         documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other
         items. <abbr title="Hypertext Markup Language" class="uDotted"> HTML </abbr> elements are delineated by
-        <dfn>tags</dfn>, written using angle brackets. Tags such as <code><mark class="brown">&ltimg/&gt</mark></code>
-        and <code><mark class="brown">&ltinput/&gt</mark></code> directly introduce content into the page. Other tags
-        such as <code><mark class="brown">&ltp&gt</mark></code> surround and provide information about document text and
-        may include other tags as sub-elements. Browsers do not display the
+        <dfn>tags</dfn>, written using angle brackets. Tags such as <code><mark class="brown">&lt;img/&gt;</mark></code>
+        and <code><mark class="brown">&lt;input/&gt;</mark></code> directly introduce content into the page. Other tags
+        such as <code><mark class="brown">&lt;p&gt;</mark></code> surround and provide information about document text
+        and may include other tags as sub-elements. Browsers do not display the
         <abbr title="Hypertext Markup Language" class="uDotted"> HTML </abbr> tags, but use them to interpret the
         content of the page.
     </p>
@@ -95,9 +94,9 @@
         including those called <i>tags</i> (and their <i>attributes</i>), character-based <i>data types, character
             references</i> and <i>entity references</i>. <abbr title="Hypertext Markup Language" class="uDotted"> HTML
         </abbr>
-        tags most commonly come in pairs like <code><mark class="brown">&lth1&gt</mark></code> and
-        <code><mark class="brown">&lt/h1&gt</mark></code>, although some represent <i>empty elements</i> and so are
-        unpaired, for example <code><mark class="brown">&ltimg&gt</mark></code>. The first tag in such a pair is the
+        tags most commonly come in pairs like <code><mark class="brown">&lt;h1&gt;</mark></code> and
+        <code><mark class="brown">&lt;/h1&gt;</mark></code>, although some represent <i>empty elements</i> and so are
+        unpaired, for example <code><mark class="brown">&lt;img&gt;</mark></code>. The first tag in such a pair is the
         <i>start tag</i>, and the second is the <i>end tag</i> (they are also called <i>opening tags</i> and
         <i>closing tags</i>).
     </p>
@@ -109,20 +108,18 @@
     <p>The following is an example of the classic "Hello, World!" program:</p>
 
     <div>
-        <code>
-            <pre>
+        <pre>
 
-            <span class="brown">&lt!DOCTYPE html&gt
-            &lthtml&gt
-                &lthead&gt
-                     &lttitle&gt </span>This is a title<span class="brown"> &lt/title&gt
-                &lt/head&gt
-                &ltbody&gt
-                    &ltp&gt </span>Hello world!<span class="brown"> &lt/p&gt
-                &lt/body&gt
-            &lt/html&gt </span>    
+            <span class="brown">&lt;!DOCTYPE html&gt;
+            &lt;html&gt;
+                &lt;head&gt;
+                     &lt;title&gt; </span>This is a title<span class="brown"> &lt;/title&gt;
+                &lt;/head&gt;
+                &l;tbody&gt;
+                    &lt;p&gt; </span>Hello world!<span class="brown"> &lt;/p&gt;
+                &lt;/body&gt;
+            &lt;/html&gt; </span>    
             </pre>
-        </code>
 
 
     </div>
