--- a/dz3.html
+++ b/dz3.html
@@ -115,7 +115,7 @@
                 &lt;head&gt;
                      &lt;title&gt; </span>This is a title<span class="brown"> &lt;/title&gt;
                 &lt;/head&gt;
-                &l;tbody&gt;
+                &lt;tbody&gt;
                     &lt;p&gt; </span>Hello world!<span class="brown"> &lt;/p&gt;
                 &lt;/body&gt;
             &lt;/html&gt; </span>    
