--- a/dz3.html
+++ b/dz3.html
@@ -38,10 +38,6 @@
             border-style: double;
         }
 
-        .uDotted {
-            text-decoration-line: underline;
-        }
-
         .brown {
             color: brown;
             font-weight: bolder;
@@ -62,27 +58,27 @@
 
     <h2 class="alignCentr">What is HTML?</h2>
 
-    <p><b>Hypertext Markup Language (<abbr title="Hypertext Markup Language" class="uDotted"> HTML </abbr>)</b>
+    <p><b>Hypertext Markup Language (<abbr title="Hypertext Markup Language"> HTML </abbr>)</b>
         is the standard markup language for creating web pages and web applications.
     </p>
 
-    <p>Web browsers receive <abbr title="Hypertext Markup Language" class="uDotted"> HTML </abbr> documents from a
+    <p>Web browsers receive <abbr title="Hypertext Markup Language"> HTML </abbr> documents from a
         web server or from local storage and render the documents into multimedia web pages.
-        <abbr title="Hypertext Markup Language" class="uDotted"> HTML </abbr> describes the structure of a web page
+        <abbr title="Hypertext Markup Language"> HTML </abbr> describes the structure of a web page
         semantically and originally included cues for the appearance of the document.
     </p>
 
-    <p>HTML elements are the building blocks of <abbr title="Hypertext Markup Language" class="uDotted"> HTML </abbr>
-        pages. With <abbr title="Hypertext Markup Language" class="uDotted"> HTML </abbr> constructs, images and other
+    <p>HTML elements are the building blocks of <abbr title="Hypertext Markup Language"> HTML </abbr>
+        pages. With <abbr title="Hypertext Markup Language"> HTML </abbr> constructs, images and other
         objects such as interactive forms may be embedded into the rendered page.
-        <abbr title="Hypertext Markup Language" class="uDotted"> HTML </abbr> provides a means to create structured
+        <abbr title="Hypertext Markup Language"> HTML </abbr> provides a means to create structured
         documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other
-        items. <abbr title="Hypertext Markup Language" class="uDotted"> HTML </abbr> elements are delineated by
+        items. <abbr title="Hypertext Markup Language"> HTML </abbr> elements are delineated by
         <dfn>tags</dfn>, written using angle brackets. Tags such as <code><mark class="brown">&lt;img/&gt;</mark></code>
         and <code><mark class="brown">&lt;input/&gt;</mark></code> directly introduce content into the page. Other tags
         such as <code><mark class="brown">&lt;p&gt;</mark></code> surround and provide information about document text
         and may include other tags as sub-elements. Browsers do not display the
-        <abbr title="Hypertext Markup Language" class="uDotted"> HTML </abbr> tags, but use them to interpret the
+        <abbr title="Hypertext Markup Language"> HTML </abbr> tags, but use them to interpret the
         content of the page.
     </p>
 
@@ -90,9 +86,9 @@
 
     <h2 class="alignCentr">Markup</h2>
 
-    <p><abbr title="Hypertext Markup Language" class="uDotted"> HTML </abbr> markup consists of several key components,
+    <p><abbr title="Hypertext Markup Language"> HTML </abbr> markup consists of several key components,
         including those called <i>tags</i> (and their <i>attributes</i>), character-based <i>data types, character
-            references</i> and <i>entity references</i>. <abbr title="Hypertext Markup Language" class="uDotted"> HTML
+            references</i> and <i>entity references</i>. <abbr title="Hypertext Markup Language"> HTML
         </abbr>
         tags most commonly come in pairs like <code><mark class="brown">&lt;h1&gt;</mark></code> and
         <code><mark class="brown">&lt;/h1&gt;</mark></code>, although some represent <i>empty elements</i> and so are
@@ -101,7 +97,7 @@
         <i>closing tags</i>).
     </p>
 
-    <p>Another important component is the <abbr title="Hypertext Markup Language" class="uDotted"> HTML </abbr>
+    <p>Another important component is the <abbr title="Hypertext Markup Language"> HTML </abbr>
         <i>document type declaration</i>, which triggers standards mode rendering.
     </p>
 
@@ -109,7 +105,6 @@
 
     <div>
         <pre>
-
             <span class="brown">&lt;!DOCTYPE html&gt;
             &lt;html&gt;
                 &lt;head&gt;
@@ -120,15 +115,13 @@
                 &lt;/body&gt;
             &lt;/html&gt; </span>    
             </pre>
-
-
     </div>
 
     <hr class="rule2">
 
     <b>Tags:</b> <mark class="blue">CodingScripting</mark> <mark class="blue">head</mark>
-    <mark class="blue"><abbr title="Hypertext Markup Language" class="uDotted">HTML</abbr></mark>
-    <mark class="blue">Introduction to <abbr title="Hypertext Markup Language" class="uDotted">HTML</abbr></mark>
+    <mark class="blue"><abbr title="Hypertext Markup Language">HTML</abbr></mark>
+    <mark class="blue">Introduction to <abbr title="Hypertext Markup Language">HTML</abbr></mark>
     <mark class="blue">Landing</mark> <mark class="blue">Links semantics</mark> <mark class="blue">Structure</mark>
     <mark class="blue">Text</mark>
 </body>
