--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <a href="dz1.html">home work 1</a> <br>
     <a href="dz2.html">home work 2</a> <br>
     <a href="dz3.html">home work 3</a> <br>
+    <a href="dz4.html">home work 4</a> <br>
     <a href="pz1.html">practical work 1</a> <br>
     <a href="pz2.html">practical work 2</a> <br>
-    <a href="pz3.html">practical work 3</a>
+    <a href="pz3.html">practical work 3</a> <br>
+    <a href="pz4.html">practical work 4</a>
   </body>
 
 </html>
