--- a/pz4.html
+++ b/pz4.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,34 +10,56 @@
     h1 {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
+
+    .seasons {
+      list-style-image: url(img/arrow_16.png);
+    }
+
+    .winter {
+      list-style-image: url(img/winter_16.png);
+    }
+
+    .spring {
+      list-style-image: url(img/spring_16.png);
+    }
+
+    .summer {
+      list-style-image: url(img/summer_16.png);
+    }
+
+    .autumn {
+      list-style-image: url(img/autumn_16.png);
+    }
   </style>
 </head>
+
 <body>
+  <a href="index.html">Home</a>
   <h1>Seasons</h1>
-  <ul>
+  <ul class="seasons">
     <li>Winter
-      <ul>
+      <ul class="winter">
         <li>December</li>
         <li>January</li>
         <li>February</li>
       </ul>
     </li>
     <li>Spring
-      <ul>
+      <ul class="spring">
         <li>March</li>
         <li>April</li>
         <li>May</li>
       </ul>
     </li>
     <li>Summer
-      <ul>
+      <ul class="summer">
         <li>June</li>
         <li>July</li>
         <li>August</li>
       </ul>
     </li>
     <li>Autumn
-      <ul>
+      <ul class="autumn">
         <li>September</li>
         <li>October</li>
         <li>November</li>
@@ -44,4 +67,5 @@
     </li>
   </ul>
 </body>
+
 </html>
