--- a/pz4.html
+++ b/pz4.html
@@ -12,23 +12,23 @@
     }
 
     .seasons {
-      list-style-image: url(img/arrow_16.png);
+      list-style-image: url(img4/arrow_16.png);
     }
 
     .winter {
-      list-style-image: url(img/winter_16.png);
+      list-style-image: url(img4/winter_16.png);
     }
 
     .spring {
-      list-style-image: url(img/spring_16.png);
+      list-style-image: url(img4/spring_16.png);
     }
 
     .summer {
-      list-style-image: url(img/summer_16.png);
+      list-style-image: url(img4/summer_16.png);
     }
 
     .autumn {
-      list-style-image: url(img/autumn_16.png);
+      list-style-image: url(img4/autumn_16.png);
     }
   </style>
 </head>
