--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
     <a href="dz2.html">home work 2</a> <br>
     <a href="dz3.html">home work 3</a> <br>
     <a href="dz4.html">home work 4</a> <br>
+    <a href="dz5.html">home work 5</a> <br>
+    <a href="dz6.html">home work 6</a> <br>
     <a href="pz1.html">practical work 1</a> <br>
     <a href="pz2.html">practical work 2</a> <br>
     <a href="pz3.html">practical work 3</a> <br>
-    <a href="pz4.html">practical work 4</a>
+    <a href="pz4.html">practical work 4</a> <br>
+    <a href="pz5.html">practical work 5</a> <br>
+    <a href="pz6.html">practical work 6</a>
+
   </body>
 
 </html>
