--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <a href="pz3.html">practical work 3</a> <br>
     <a href="pz4.html">practical work 4</a> <br>
     <a href="pz5.html">practical work 5</a> <br>
-    <a href="pz6.html">practical work 6</a>
+    <a href="pz6.html">practical work 6</a> <br>
+    <a href="pz7.html">practical work 7</a>
 
   </body>
 
