--- a/pz7.html
+++ b/pz7.html
@@ -28,6 +28,7 @@
 </head>
 
 <body>
+  <a href="index.html">Home</a>
   <div>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur sed fuga maxime, non animi illum sit et porro
     possimus, mollitia officia laudantium consequuntur nam accusamus, quaerat nisi aperiam rem dignissimos?
