--- a/dz6.html
+++ b/dz6.html
@@ -1,45 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        dl {
+            background-color: #f5f5f5;
+            max-width: 900px;
+            padding: 20px;
+            margin: 20px;
+        }
+
+        dt {
+            font-style: italic;
+        }
+
+        .gray {
+            color: #aaa9af;
+        }
+
+        .blue {
+            color: #7c78c6;
+        }
+    </style>
 </head>
+
 <body>
     <a href="index.html">Home</a>
 
-    TAG
+    <dl>
+        <h3>TAG</h3>
 
-[tæg]
+        [tæg]<br>
+        <br>
+        <dt>noun</dt>
 
-noun
+        <dd>
+            <ol>
+                <li>a label attached to someone or something for the purpose of identification or to give other
+                    information.<br>
 
-a label attached to someone or something for the purpose of identification or to give other information.
+                    <span class="gray">"he gave his pet a collar with a metal name tag"</span><br>
 
-"he gave his pet a collar with a metal name tag"
+                    synonyms: <span class="blue">label</span>, <span class="blue">ticket</span>,
+                    <span class="blue">badge</span>, <span class="blue">mark</span>, <span class="blue">marker</span>,
+                    <span class="blue">tab</span>, <span class="blue">tally</span>, <span class="blue">sticker</span>,
+                    <span class="blue">docket</span>, <span class="blue">stub</span>, <span class="blue">chit</span>,
+                    <span class="blue">chitt</span>, <span class="blue">counterfoi</span>, <span
+                        class="blue">flag</span>,
+                    <span class="blue">stamp</span><br>
 
-synonyms: label, ticket, badge, mark, marker, tab, tally, sticker, docket, stub, chit, chitt, counterfoi, flag, stamp
+                    <span class="gray">"a price tag"</span>
+                </li>
 
-"a price tag"
+                <li>a small piece or part that is attached to a main body.</li>
+            </ol>
+        </dd>
 
-a small piece or part that is attached to a main body.
+        <dt>verb</dt>
 
-verb
+        <dd>
+            <ol>
+                <li>attach a label to.<br>
 
-attach a label to.
+                    <span class="gray">"mothers suspected that their babies had been wrongly tagged during an alarm at
+                        the
+                        hospital"</span><br>
 
-"mothers suspected that their babies had been wrongly tagged during an alarm at the hospital"
+                    synonyms: <span class="blue">label</span>, <span class="blue">attach tags to</span>,
+                    <span class="blue">put a label on</span>, <span class="blue">mark</span>, <span
+                        class="blue">ticket</span>,
+                    <span class="blue">earmark</span>, <span class="blue">identify</span>, <span
+                        class="blue">docket</span>,
+                    <span class="blue">flag</span>, <span class="blue">indicate</span><br>
 
-synonyms: label, attach tags to, put a label on, mark, ticket, earmark, identify, docket, flag, indicate
+                    <span class="gray">"the bottles were tagged with colour-coded labels"</span>
+                </li>
 
-"the bottles were tagged with colour-coded labels"
 
-add to something, especially as an afterthought or with no real connection.
+                <li>add to something, especially as an afterthought or with no real connection.<br>
 
-"she meant to tag her question on at the end of her remarks"
+                    <span class="gray">"she meant to <b>tag</b> her question <b>on</b> at the end of her
+                        remarks"</span><br>
 
-synonyms: add, tack, join, attach, append, affix, annex
+                    synonyms: <span class="blue">add</span>, <span class="blue">tack</span>, <span
+                        class="blue">join</span>,
+                    <span class="blue">attach</span>, <span class="blue">append</span>, <span class="blue">affix</span>,
+                    <span class="blue">annex</span><br>
 
-"their heads were so large that the rest of their bodies seemed tagged on as an afterthought"
+                    <span class="gray">"their heads were so large that the rest of their bodies seemed <b>tagged on</b>
+                        as an
+                        afterthought"</span>
+                </li>
+            </ol>
+        </dd>
+    </dl>
+
 </body>
+
 </html>
