--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <a href="dz4.html">home work 4</a> <br>
     <a href="dz5.html">home work 5</a> <br>
     <a href="dz6.html">home work 6</a> <br>
+    <a href="dz10.html">home work 10</a> <br>
     <a href="pz1.html">practical work 1</a> <br>
     <a href="pz2.html">practical work 2</a> <br>
     <a href="pz3.html">practical work 3</a> <br>
