--- a/dz7.html
+++ b/dz7.html
@@ -9,14 +9,7 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        /* div {
-            display: flex;
-            display: inline-block;
-            border: 5px;
-            border-radius: 10%;
-        } */
+        }       
        
         figcaption {
             text-align: center;
@@ -29,16 +22,33 @@
 
         .flex {
             display: flex;
-            display: inline-block;
+            
             border: 10px;
             border-radius: 10%;
         }
     </style>
 </head>
-<a href="index.html">Home</a>
 
 <body>
+<a href="index.html">Home</a>
+
 <div class="flex">
+    <figure>
+        <img src="img4/Food_Pepper-128.png" alt="Pepper">
+        <figcaption>Pepper</figcaption>
+    </figure>
+    <figure>
+        <img src="img4/Food_Pepper-128.png" alt="Pepper">
+        <figcaption>Pepper</figcaption>
+    </figure>
+    <figure>
+        <img src="img4/Food_Pepper-128.png" alt="Pepper">
+        <figcaption>Pepper</figcaption>
+    </figure>
+    <figure>
+        <img src="img4/Food_Pepper-128.png" alt="Pepper">
+        <figcaption>Pepper</figcaption>
+    </figure>
     <figure>
         <img src="img4/Food_Pepper-128.png" alt="Pepper">
         <figcaption>Pepper</figcaption>
