--- a/dz10.html
+++ b/dz10.html
@@ -14,25 +14,6 @@
     div {
       background-color: #2a4f6e;
       color: white;
-      text-align: center;
-      font-size: smaller;
-      padding-bottom: 50px;
-    }
-
-    div div {
-      font-size: larger;
-      text-align: left;
-      margin: 60px 120px 10px 120px;
-      padding: 0;
-    }
-
-    div div div {
-      background-color: #2a4f6e;
-      color: white;
-      text-align: center;
-      font-size: none;
-      margin: 0;
-      padding: 0px 20px 0px 0px;
     }
 
     a {
@@ -42,24 +23,14 @@
 
     img {
       filter: grayscale(1);
-      size: 5x;
-    }
-
-    footer {
-      background-color: #2a4f6e;
-      text-align: center;
-    }
-
-    hr {
-      margin: 20px;
     }
 
     .flex {
       display: flex;
-      display: inline-block;
+      gap: 5px;
     }
 
-    img:hover {
+    img:hover  {
       filter: grayscale(0);
     }
 
@@ -71,34 +42,25 @@
 </head>
 
 <body>
-  <a href="index.html">Home</a>
   <div>
-    <footer>
-      <div class="flex">
-        <a href="#">Home</a><br>
-        <a href="#">About</a><br>
-        <a href="#">Gallery</a><br>
-        <a href="#">News</a><br>
-      </div>
-      <div class="flex">
-        <a href="#">Blog</a><br>
-        <a href="#">FAQ</a><br>
-        <a href="#">Contacts</a><br>
-        <a href="#">Privasy & Cookies</a><br>
-      </div>
-      <div class="flex">
-        <div class="flex">
-          <img src="img4/fb.png">
-        </div>
-        <div class="flex">
-          <img src="img4/insta.png">
-        </div class="flex">
-        <div class="flex">
-          <img src="img4/youtube.png">
-        </div>
-      </div>
-      <hr>
-    </footer>
+    <div class="flex">
+      <a href="#">Home</a><br>
+      <a href="#">About</a><br>
+      <a href="#">Gallery</a><br>
+      <a href="#">News</a><br>
+    </div>
+    <div class="flex">
+      <a href="#">Blog</a><br>
+      <a href="#">FAQ</a><br>
+      <a href="#">Contacts</a><br>
+      <a href="#">Privasy & Cookies</a><br>
+    </div>
+    <div class="flex">
+      <img src="img4/fb.png">
+      <img src="img4/insta.png">
+      <img src="img4/youtube.png">
+    </div>
+    <hr>
     Copyright &copy; Company 2018-2019
   </div>
 </body>
