--- a/dz10.html
+++ b/dz10.html
@@ -12,8 +12,15 @@
     }
 
     div {
+      padding: 60px;
+      max-width: 900px;
       background-color: #2a4f6e;
       color: white;
+      text-align: center;
+    }
+
+    div div {
+      padding: 0;
     }
 
     a {
@@ -25,12 +32,27 @@
       filter: grayscale(1);
     }
 
-    .flex {
+    .flex1 {
       display: flex;
-      gap: 5px;
+      justify-content: space-around;
+      align-items: center;
+      align-items: flex-start;
     }
 
-    img:hover  {
+    .flex2 {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      flex-wrap: wrap;
+      gap: 0;
+    }
+
+    .flex3 {
+      display: flex;
+      gap: 30px;
+    }
+
+    img:hover {
       filter: grayscale(0);
     }
 
@@ -42,25 +64,29 @@
 </head>
 
 <body>
+  <a href="index.html">Home</a>
   <div>
-    <div class="flex">
-      <a href="#">Home</a><br>
-      <a href="#">About</a><br>
-      <a href="#">Gallery</a><br>
-      <a href="#">News</a><br>
-    </div>
-    <div class="flex">
-      <a href="#">Blog</a><br>
-      <a href="#">FAQ</a><br>
-      <a href="#">Contacts</a><br>
-      <a href="#">Privasy & Cookies</a><br>
-    </div>
-    <div class="flex">
-      <img src="img4/fb.png">
-      <img src="img4/insta.png">
-      <img src="img4/youtube.png">
+    <div class="flex1">
+      <div class="flex2">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Gallery</a>
+        <a href="#">News</a><br>
+      </div>
+      <div class="flex2">
+        <a href="#">Blog</a>
+        <a href="#">FAQ</a>
+        <a href="#">Contacts</a>
+        <a href="#">Privasy & Cookies</a><br>
+      </div>
+      <div class="flex3">
+        <img src="img4/fb.png" width="40px" height="40px">
+        <img src="img4/insta.png" width="40px" height="40px">
+        <img src="img4/youtube.png" width="40px" height="40px">
+      </div>
     </div>
     <hr>
+    <br>
     Copyright &copy; Company 2018-2019
   </div>
 </body>
