--- a/pz11.html
+++ b/pz11.html
@@ -11,7 +11,8 @@
       margin: 0;
       display: flex;
       height: 100vh;
-      justify-content: center align-items: center
+      justify-content: center 
+      
     }
 
     div {
