--- a/dz8.html
+++ b/dz8.html
@@ -5,8 +5,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+
+    div {
+      background-color: #808080;
+      text-align: center;
+      color: white;
+      max-width: 200px;
+    }
+
+  </style>
 </head>
 <body>
-  menu
+  <div> <img src="/img4/favorites.png"> EDIT</div>
+  <div>FAVORITES</div>
+  <div>HISTORY</div>
+  <div>SECURITY</div>
+  <div>SETTINGS</div>
 </body>
 </html>
