--- a/index.html
+++ b/index.html
@@ -2,29 +2,82 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    body {
+      background-image: url(img4/Фон_2560х1600.jpg);
+      background-attachment: fixed;
+      background-size: cover;
+    }    
+
+    a {
+      background-color: blue;
+      opacity: 0.5;
+      border-radius: 20px;
+      border: 0;
+      padding: 10px 20px;
+      font-size: larger;
+      text-decoration: none;
+      color: white;
+    }
+    a:hover {
+      background-color: red;      
+      /* color: red; */
+    }   
+
+    .flex {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+
+    .flex1 {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+  </style>
 </head>
 
 <body>
-    <a href="dz1.html">home work 1</a> <br>
-    <a href="dz2.html">home work 2</a> <br>
-    <a href="dz3.html">home work 3</a> <br>
-    <a href="dz4.html">home work 4</a> <br>
-    <a href="dz5.html">home work 5</a> <br>
-    <a href="dz6.html">home work 6</a> <br>
-    <a href="dz7.html">home work 7</a> <br>
-    <a href="dz10.html">home work 10</a> <br>
-    <a href="pz1.html">practical work 1</a> <br>
-    <a href="pz2.html">practical work 2</a> <br>
-    <a href="pz3.html">practical work 3</a> <br>
-    <a href="pz4.html">practical work 4</a> <br>
-    <a href="pz5.html">practical work 5</a> <br>
-    <a href="pz6.html">practical work 6</a> <br>
-    <a href="pz7.html">practical work 7</a>
+  <div class="flex">
+    <div class="flex1">
+      <a href="dz1.html">home work 1</a>
+      <a href="dz2.html">home work 2</a>
+      <a href="dz3.html">home work 3</a>
+      <a href="dz4.html">home work 4</a>
+      <a href="dz5.html">home work 5</a>
+      <a href="dz6.html">home work 6</a>
+      <a href="dz7.html">home work 7</a>
+      <a href="dz8.html">home work 8</a>
+      <a href="dz9.html">home work 9</a>
+      <a href="dz10.html">home work 10</a>
+      <a href="dz11.html">home work 11</a>
+      <a href="dz12.html">home work 12</a>
+      <a href="dz13.html">home work 13</a>
+    </div>
 
-  </body>
+    <div class="flex1">
+      <a href="pz1.html">practical work 1</a>
+      <a href="pz2.html">practical work 2</a>
+      <a href="pz3.html">practical work 3</a>
+      <a href="pz4.html">practical work 4</a>
+      <a href="pz5.html">practical work 5</a>
+      <a href="pz6.html">practical work 6</a>
+      <a href="pz7.html">practical work 7</a>
+      <a href="pz8.html">practical work 8</a>
+      <a href="pz9.html">practical work 9</a>
+      <a href="pz10.html">practical work 10</a>
+      <a href="pz11.html">practical work 11</a>
+      <a href="pz12.html">practical work 12</a>
+      <a href="pz13.html">practical work 13</a>      
+    </div>
+  </div>
+
+</body>
 
 </html>
