--- a/dz11.html
+++ b/dz11.html
@@ -74,6 +74,7 @@
 </head>
 
 <body>
+  <a href="index.html">Home</a>
   <div class="watch">
     <div class="hours"></div>
     <div class="minutes"></div>
