--- a/pz8.html
+++ b/pz8.html
@@ -7,6 +7,8 @@
   <title>Document</title>
 </head>
 <body>
+  <a href="index.html">Home</a>
+
   Computer programming
 
 From Wikipedia, the free encyclopedia
